k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: <deploy_name>
  namespace: <namespace>
  labels:
    app: <deploy_name>
spec:
  ports:
    - name: "80"
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: <deploy_name>
